@@ -1,3 +1,7 @@
+2003-07-02  Alexander Dupuy  <dupuy@sysdetect.com>
+
+	* lib/b_strconv.c (bk_string_atoflag): don't segfault for NULL names
+
 2003-07-01  Seth Robertson  <seth@startide.sysdetect.com>
 
 	* lib/b_string.c (bk_string_quote): Operation precedence snafu
